# hasky

./: .gitignore  Bitmap.hs  Camera.hs  Color.hs  Hasky.cabal  Hasky.hs  Light.hs  Option.hs  Plane.hs  Primitive.hs  README  Ray.hs  Render.hs  Scene.hs  Sphere.hs  Vector.hs  Xor.hs
scenes/: .gitignore  scene1.scene  scene2.scene  scene3.scene
