Name:                Hasky
Version:             0.4
Description:         HASKell raYtracer
Author:              Robert Worgul
Maintainer:          r.worgul@stud.fh-sm.de
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable hasky
  Main-is:           Hasky.hs
  Build-Depends:     base >= 3 && < 5, haskell98, bmp, bytestring